err/monkeytype.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/mypy'...
Listing './lib/mypy/typeshed'...
Listing './lib/mypy/typeshed/third_party'...
Listing './lib/mypy/typeshed/third_party/3.6'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/MonkeyType-18.1.11.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/monkeytype'...
Compiling './lib/python3.5/site-packages/monkeytype/cli.py'...
***   File "./lib/python3.5/site-packages/monkeytype/cli.py", line 71
    raise argparse.ArgumentTypeError(f'cannot import {path}: {mte}')
                                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/monkeytype/db'...
Compiling './lib/python3.5/site-packages/monkeytype/db/base.py'...
***   File "./lib/python3.5/site-packages/monkeytype/db/base.py", line 64
    self.traces: List[CallTrace] = []
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/monkeytype/db/sqlite.py'...
***   File "./lib/python3.5/site-packages/monkeytype/db/sqlite.py", line 60
    values: List[QueryValue] = [module]
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/monkeytype/encoding.py'...
***   File "./lib/python3.5/site-packages/monkeytype/encoding.py", line 68
    d: TypeDict = {
     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/monkeytype/stubs.py'...
***   File "./lib/python3.5/site-packages/monkeytype/stubs.py", line 222
    arg_types: DefaultDict[str, Set[type]] = collections.defaultdict(set)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/monkeytype/tracing.py'...
***   File "./lib/python3.5/site-packages/monkeytype/tracing.py", line 197
    self.traces: Dict[FrameType, CallTrace] = {}
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/monkeytype/util.py'...
***   File "./lib/python3.5/site-packages/monkeytype/util.py", line 50
    f"Property {module}.{qualname} has setter or deleter.")
                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/retype-17.12.0.dist-info'...
Compiling './lib/python3.5/site-packages/retype.py'...
***   File "./lib/python3.5/site-packages/retype.py", line 101
    print(f'error: {file}: {error}', file=sys.stderr)
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/typed_ast'...
Listing './lib/python3.5/site-packages/typed_ast-1.1.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
